# IT-Careers-web-app

./: README.md  app.py  database.py  pyproject.toml
static/: styles.css
templates/: app_form.html  apply_confirm.html  footer.html  home.html  job_app.html  jobs.html  nav.html  text.html
